--- a/Maravilhosa/index.html
+++ b/Maravilhosa/index.html
@@ -20,22 +20,88 @@
     </nav>
 
     <!-- Cabeçalho -->
-
+<header class="header">
+    <div class="container_header">
+        <div class="header_titulo">
+            <h1>The future is female coders.</h1>
+            <a class="header_button">Saiba mais</a>
+        </div>
+        <div class="header_container_img">
+            <div>
+                <img class="header_maravilhosa_img" src="./img/header_maravilhosa.jpg" alt="" />
+            </div>
+        </div>    
+    </div>
+</header>
    
 
     <!-- Secao Maravilhosa -->
 
-   
+    <section class="maravilhosa">
+        <div>
+            <h2>Frida Kahlo</h2>
+        </div>
+
+        <div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, a nemo consequatur alias nisi, quae odit ex pariatur iste labore temporibus. Accusamus at nisi nobis accusantium consequatur architecto harum dignissimos?</p>
+        </div>
+
+        <div>
+            <img src="" alt="">
+            <div>
+                <h2>Sua história</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum provident molestias natus sit modi iste impedit eaque quia? Magni architecto dignissimos porro sunt nihil facere voluptates dolore nostrum nulla autem.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, sunt adipisci voluptas ad optio fuga aperiam? Incidunt repudiandae, mollitia eos ipsam labore ullam dicta ea saepe molestiae a at asperiores!</p>
+            </div>
+        </div>
+
+    </section>
 
 
 
    <!-- AUTORA -->
    
-
+    <section>
+       <div>
+           <h2>Sobre a autora</h2>
+           <div>
+               <img src="" alt="">
+               <div>
+                   <h3>Thamyres</h3>
+                   <p>
+                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, doloremque. Veniam incidunt amet eligendi. Voluptates repellendus cupiditate sint quod facere nulla placeat quidem, eius, obcaecati molestiae hic et sit! Nemo.
+                   </p>
+               </div>
+           </div>
+       </div>
+    </section>
 
     <!-- Footer -->
 
-   
+    <footer>
+        <div>
+            <ul>
+                <li><a href="#" target="blank">Home</a></li>
+                <li><a href="https://reprograma.com.br/" target="blank">Conheça a reprograma</a></li>
+            </ul>
+            <img src="./img/logo-white.png" alt="">
+
+            <div>
+                <a href="https://www.facebook.com/ReprogramaBr/" target="_blank">
+                    <img src="./img/icon-facebook.png" alt="Íconde do Facebook">
+                </a>
+                <a href="https://twitter.com/ReprogramaBr" target="_blank">
+                    <img src="./img/icon-twitter.png" alt="Ícone do Twitter">
+                </a>
+                <a href="https://www.instagram.com/reprogramabr/" target="_blank">
+                    <img src="./img/icon-instagram.png" alt="Ícone do Instagram">
+                </a>
+                <a href="https://www.linkedin.com/company/reprogramabr/" target="_blank">
+                    <img src="./img/icon-linkedin.png" alt="Ícone do LinkedIn">
+                </a>
+            </div>
+        </div>
+    </footer>
 
 
 
