desenvolvido seção maravilhosa

--- a/Maravilhosa/index.html
+++ b/Maravilhosa/index.html
@@ -38,23 +38,24 @@
     <!-- Secao Maravilhosa -->
 
     <section class="maravilhosa">
-        <div>
-            <h2>Frida Kahlo</h2>
-        </div>
-
-        <div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, a nemo consequatur alias nisi, quae odit ex pariatur iste labore temporibus. Accusamus at nisi nobis accusantium consequatur architecto harum dignissimos?</p>
-        </div>
-
-        <div>
-            <img src="" alt="">
+        <div class="container__maravilhosa">
             <div>
-                <h2>Sua história</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum provident molestias natus sit modi iste impedit eaque quia? Magni architecto dignissimos porro sunt nihil facere voluptates dolore nostrum nulla autem.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, sunt adipisci voluptas ad optio fuga aperiam? Incidunt repudiandae, mollitia eos ipsam labore ullam dicta ea saepe molestiae a at asperiores!</p>
+                <h2 class="maravilhosa__titulo">Frida Kahlo</h2>
+            </div>
+
+            <div class="maravilhosa__boxBorder">
+                <p class="boxBorder__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, a nemo consequatur alias nisi, quae odit ex pariatur iste labore temporibus. Accusamus at nisi nobis accusantium consequatur architecto harum dignissimos?</p>
+            </div>
+
+            <div class="container__suaHistoria">
+                <img class= "suaHistoria__imagem" src="./img/frida_aut_com_colar_de_espinhos.jpg" alt="">
+                <div class="suaHistoria__texto">
+                    <h2 class="suaHistoria__titulo">Sua história</h2>
+                    <p class="suaHistoria__paragrafo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum provident molestias natus sit modi iste impedit eaque quia? Magni architecto dignissimos porro sunt nihil facere voluptates dolore nostrum nulla autem.</p>
+                    <p class="suaHistoria__paragrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, sunt adipisci voluptas ad optio fuga aperiam? Incidunt repudiandae, mollitia eos ipsam labore ullam dicta ea saepe molestiae a at asperiores!</p>
+                </div>
             </div>
         </div>
-
     </section>
 
 
