projeto responsivo 768px

--- a/Maravilhosa/index.html
+++ b/Maravilhosa/index.html
@@ -40,19 +40,20 @@
     <section class="maravilhosa">
         <div class="container__maravilhosa">
             <div>
-                <h2 class="maravilhosa__titulo">Frida Kahlo</h2>
+                <h2 class="maravilhosa__titulo">Viola Davis</h2>
             </div>
 
             <div class="maravilhosa__boxBorder">
-                <p class="boxBorder__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, a nemo consequatur alias nisi, quae odit ex pariatur iste labore temporibus. Accusamus at nisi nobis accusantium consequatur architecto harum dignissimos?</p>
+                <p class="boxBorder__texto">Atriz e produtora norte-americana. Vencedora de um Óscar, um Emmy Award e dois Tony Awards, dessa forma alcançando a Tríplice Coroa da Atuação. Foi considerada pela Time (revista) uma das 100 pessoas mais influentes do planeta em 2012 e em 2017.</p>
             </div>
 
             <div class="container__suaHistoria">
-                <img class= "suaHistoria__imagem" src="./img/frida_aut_com_colar_de_espinhos.jpg" alt="">
+                <img class= "suaHistoria__imagem" src="./img/viola-davis.jpg" alt="foto viola davis">
                 <div class="suaHistoria__texto">
                     <h2 class="suaHistoria__titulo">Sua história</h2>
-                    <p class="suaHistoria__paragrafo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum provident molestias natus sit modi iste impedit eaque quia? Magni architecto dignissimos porro sunt nihil facere voluptates dolore nostrum nulla autem.</p>
-                    <p class="suaHistoria__paragrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, sunt adipisci voluptas ad optio fuga aperiam? Incidunt repudiandae, mollitia eos ipsam labore ullam dicta ea saepe molestiae a at asperiores!</p>
+                    <p class="suaHistoria__paragrafo">Viola Davis nasceu em 1965 em St. Matthews, South Carolina, a segunda mais nova de seis filhos. Sua mãe, Mae Alice foi uma ativista durante o Movimento dos direitos civis dos negros nos Estados Unidos. Quando Davis tinha dois anos, sua mãe foi presa em um desses protestos, a levando junto com ela. A atriz descreveu-se como tendo vivido na pobreza abjeta e disfunção durante a infância, e lembra de ter morado em apartamentos condenados e infestados de ratos.</p>
+                    <p class="suaHistoria__paragrafo">Davis se formou em Rhode Island College, graduando-se em 1988. Em sua carreira, Davis ganhou seu primeiro prêmio Tony Award de melhor performance secundária de uma atriz em uma peça, em 2010 ganhou o segundo.</p>
+                    <p class="suaHistoria__paragrafo">Em 2015, Davis se tornou a primeira mulher negra de qualquer nacionalidade a ganhar o prêmio Primetime Emmy de melhor atriz em série de drama por seu papel principal em How To Get Away With Muder. Em 2016 interpretou Amanda Waller no filme Suicide Squad, uma adaptação de uma série da DC Comics que teve continuidade em 2021.</p>
                 </div>
             </div>
         </div>
@@ -63,14 +64,14 @@
    <!-- AUTORA -->
    
     <section>
-       <div>
-           <h2>Sobre a autora</h2>
-           <div>
-               <img src="" alt="">
+       <div class="autora">
+           <h2 class="autora__titulo">Sobre a autora</h2>
+           <div class="autora__sobre">
+               <img class="autora__imagem" src="./img/thamyres-lais-1.jpg" alt="foto da autora">
                <div>
                    <h3>Thamyres</h3>
                    <p>
-                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, doloremque. Veniam incidunt amet eligendi. Voluptates repellendus cupiditate sint quod facere nulla placeat quidem, eius, obcaecati molestiae hic et sit! Nemo.
+                       Graduanda no curso de Ciências do consumo na UFRPE, totalmente apaixonada pelo mundo da programação, amante de filmes, livros, séries e animes.
                    </p>
                </div>
            </div>
@@ -79,9 +80,9 @@
 
     <!-- Footer -->
 
-    <footer>
-        <div>
-            <ul>
+    <footer class="footer">
+        <div class="footer__menu">
+            <ul class="footer__links">
                 <li><a href="#" target="blank">Home</a></li>
                 <li><a href="https://reprograma.com.br/" target="blank">Conheça a reprograma</a></li>
             </ul>
@@ -100,6 +101,9 @@
                 <a href="https://www.linkedin.com/company/reprogramabr/" target="_blank">
                     <img src="./img/icon-linkedin.png" alt="Ícone do LinkedIn">
                 </a>
+            </div>
+            <div class="footer__cc">
+                <p>creative Commons 2021 | Feito com amor por Thamyres Lais</p>
             </div>
         </div>
     </footer>
