--- a/Maravilhosa/index.html
+++ b/Maravilhosa/index.html
@@ -24,7 +24,7 @@
     <div class="container_header">
         <div class="header_titulo">
             <h1>The future is female coders.</h1>
-            <a class="header_button">Saiba mais</a>
+            <a class="header_button" href="#maravilhosa-autora">Saiba mais</a>
         </div>
         <div class="header_container_img">
             <div>
@@ -63,7 +63,7 @@
 
    <!-- AUTORA -->
    
-    <section>
+    <section id="maravilhosa-autora">
        <div class="autora">
            <h2 class="autora__titulo">Sobre a autora</h2>
            <div class="autora__sobre">
